--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release BBS.Libraries.sln
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./UnitTests/BBS.Libraries.UnitTests.General/bin/Release/MyProject.Tests.dll
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./UnitTests/BBS.Libraries.UnitTests.General/bin/Release/BBS.Libraries.UnitTests.General.dll
