--- a/UnitTests/BBS.Libraries.UnitTests.General/BBS.Libraries.UnitTests.General.csproj
+++ b/UnitTests/BBS.Libraries.UnitTests.General/BBS.Libraries.UnitTests.General.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Data.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusTracker.cs" />
   </ItemGroup>
@@ -48,6 +49,10 @@
     <ProjectReference Include="..\..\BBS.Libraries.Enums\BBS.Libraries.Enums.csproj">
       <Project>{f9ccc56c-a0cf-4568-a51b-7bfdc8deba65}</Project>
       <Name>BBS.Libraries.Enums</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\BBS.Libraries.Extensions\BBS.Libraries.Extensions.csproj">
+      <Project>{793598ef-a420-4f13-863e-6f3d3f0c453e}</Project>
+      <Name>BBS.Libraries.Extensions</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\BBS.Libraries.Logging\BBS.Libraries.Logging.csproj">
       <Project>{1bb4c10f-a595-4102-b6c5-153c7ace31b8}</Project>
