Adding nuget scripts / bash scripts and testing this stuff out

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: csharp
 solution: BBS.Libraries.sln
+
 install:
   - nuget restore BBS.Libraries.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+
 script:
+  - chmod +x ./Scripts/IncrementVersion.sh
+  - ./Scripts/IncrementVersion.sh
   - xbuild /p:Configuration=Release BBS.Libraries.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./UnitTests/BBS.Libraries.UnitTests.General/bin/Release/BBS.Libraries.UnitTests.General.dll
+
+deploy:
+	provider: script
+	script: ./scripts/DeployingNuget.sh
+	on:
+		branch: adding-nuget
