--- a/BBS.Libraries.Enums/BBS.Libraries.Enums.nuspec
+++ b/BBS.Libraries.Enums/BBS.Libraries.Enums.nuspec
@@ -1,14 +1,17 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>BBS.Libraries.SQL</id>
+    <id>BBS.Libraries.Enums</id>
     <version>16.7.0</version>
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>SQL Helpers, Command Object, etc.</description>
+    <description>Extending enum functionality</description>
     <releaseNotes>Initial release from github library</releaseNotes>
     <copyright>Copyright 2016</copyright>
   </metadata>
+  <files>
+    <file src="BBS.Libraries.Enums\bin\Release\BBS.Libraries.Enums.dll" target="lib" />
+  </files>
 </package>
