--- a/BBS.Libraries.Contracts/BBS.Libraries.Contracts.nuspec
+++ b/BBS.Libraries.Contracts/BBS.Libraries.Contracts.nuspec
@@ -1,17 +1,17 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>BBS.Libraries.Templating</id>
+    <id>BBS.Libraries.Contracts</id>
     <version>16.7.0</version>
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Templating base classes.</description>
+    <description>Shared contracts</description>
     <releaseNotes>Initial release from github library</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <dependencies>
-      <dependency id="BBS.Libraries.IO" version="[16.7.0]" />
-    </dependencies>
   </metadata>
+  <files>
+    <file src="BBS.Libraries.Contracts\bin\Release\BBS.Libraries.Contracts.dll" target="lib" />
+  </files>
 </package>
