--- a/BBS.Libraries.Emails/BBS.Libraries.Emails.nuspec
+++ b/BBS.Libraries.Emails/BBS.Libraries.Emails.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Emails</id>
-    <version>16.7.0</version>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
@@ -11,9 +11,9 @@
     <releaseNotes>Initial release from github library</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <dependencies>
-      <dependency id="BBS.Libraries.Contracts" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Extensions" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Templating" version="[16.7.0]" />
+      <dependency id="BBS.Libraries.Contracts" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Extensions" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Templating" version="1.0.21.0" />
     </dependencies>
   </metadata>
   <files>
