--- a/BBS.Libraries.Extensions/BBS.Libraries.Extensions.nuspec
+++ b/BBS.Libraries.Extensions/BBS.Libraries.Extensions.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Extensions</id>
-    <version>16.7.0</version>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
