--- a/BBS.Libraries.IO/BBS.Libraries.IO.nuspec
+++ b/BBS.Libraries.IO/BBS.Libraries.IO.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.IO</id>
-    <version>16.7.0</version>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
@@ -12,8 +12,8 @@
     <copyright>Copyright 2016</copyright>
     <dependencies>
       <dependency id="ICSharpCode.SharpZipLib.Patched" version="[0.86.5]" />
-      <dependency id="BBS.Libraries.Contracts" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Extensions" version="[16.7.0]" />
+      <dependency id="BBS.Libraries.Contracts" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Extensions" version="1.0.21.0" />
     </dependencies>
   </metadata>
   <files>
