--- a/BBS.Libraries.Templating.Handlebars/BBS.Libraries.Templating.Handlebars.nuspec
+++ b/BBS.Libraries.Templating.Handlebars/BBS.Libraries.Templating.Handlebars.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Templating.Handlebars</id>
-    <version>16.7.0</version>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
@@ -12,10 +12,10 @@
     <copyright>Copyright 2016</copyright>
     <dependencies>
       <dependency id="Handlebars.Net" version="[1.7.1]" />
-      <dependency id="BBS.Libraries.Contracts" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Emails" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.IO" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Templating" version="[16.7.0]" />
+      <dependency id="BBS.Libraries.Contracts" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Emails" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.IO" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Templating" version="1.0.21.0" />
     </dependencies>
   </metadata>
   <files>
