--- a/BBS.Libraries.Templating.Razor/BBS.Libraries.Templating.Razor.nuspec
+++ b/BBS.Libraries.Templating.Razor/BBS.Libraries.Templating.Razor.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Templating.Razor</id>
-    <version>16.7.0</version>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
@@ -15,10 +15,10 @@
       <dependency id="Microsoft.AspNet.WebPages" version="[3.2.3]" />
       <dependency id="Microsoft.Web.Infrastructure" version="[1.0.0.0]" />
       <dependency id="RazorEngine" version="[3.8.2]" />
-      <dependency id="BBS.Libraries.Contracts" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Emails" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.IO" version="[16.7.0]" />
-      <dependency id="BBS.Libraries.Templating" version="[16.7.0]" />
+      <dependency id="BBS.Libraries.Contracts" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Emails" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.IO" version="1.0.21.0" />
+      <dependency id="BBS.Libraries.Templating" version="1.0.21.0" />
     </dependencies>
   </metadata>
   <files>
