Pointing the script folder incorrectly (Casing matters)
http://stackoverflow.com/a/1763178

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ script:
 
 deploy:
   provider: script
-  script: ./scripts/DeployingNuget.sh
+  script: ./Scripts/DeployingNuget.sh
   on:
     branch: adding-nuget
