--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,6 @@ script:
   - xbuild /p:Configuration=Release BBS.Libraries.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./UnitTests/BBS.Libraries.UnitTests.General/bin/Release/BBS.Libraries.UnitTests.General.dll
 
-deploy:
-  provider: script
-   - chmod +x ./Scripts/DeployingNuget.sh
-   - ./Scripts/DeployingNuget.sh
-  on:
-    branch: adding-nuget
+after_success:
+  - chmod +x ./Scripts/DeployingNuget.sh
+  - ./Scripts/DeployingNuget.sh
