Revert "Deleting version to try to pull from assembly"
This reverts commit ef138df26190ae317f943ffe53480fad1ec01e57.

--- a/BBS.Libraries.Logging.AppInsights/BBS.Libraries.Logging.AppInsights.nuspec
+++ b/BBS.Libraries.Logging.AppInsights/BBS.Libraries.Logging.AppInsights.nuspec
@@ -2,6 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Logging.AppInsights</id>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
