--- a/BBS.Libraries.Extensions/BBS.Libraries.Extensions.nuspec
+++ b/BBS.Libraries.Extensions/BBS.Libraries.Extensions.nuspec
@@ -2,6 +2,7 @@
 <package >
   <metadata>
     <id>BBS.Libraries.Extensions</id>
+    <version></version> <!-- Leave blank, automatically fetched from assemble file -->
     <authors>Betabyte Software</authors>
     <owners>Betabte Software</owners>
     <projectUrl>https://github.com/brentonlamar/bbs.libraries</projectUrl>
