--- a/BBS.Libraries.Logging/BBS.Libraries.Logging.nuspec
+++ b/BBS.Libraries.Logging/BBS.Libraries.Logging.nuspec
@@ -15,6 +15,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="./BBS.Libraries.Logging/bin/Release/BBS.Libraries.Logging.dll" target="lib" />
+    <file src="bin/Release/BBS.Libraries.Logging.dll" target="lib" />
   </files>
 </package>
