--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: csharp
 solution: BBS.Libraries.sln
+
 install:
-  - nuget restore BBS.Libraries.sln
-  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+  - nuget restore BBS.Libraries.sln -Verbosity quiet
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner 
+
 script:
-  - xbuild /p:Configuration=Release BBS.Libraries.sln
+  - chmod +x ./Scripts/IncrementVersion.sh
+  - ./Scripts/IncrementVersion.sh
+  - xbuild /p:Configuration=Release BBS.Libraries.sln /p:TargetFrameworkVersion="v4.6" 
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./UnitTests/BBS.Libraries.UnitTests.General/bin/Release/BBS.Libraries.UnitTests.General.dll
+
+after_success:
+  - chmod +x ./Scripts/DeployingNuget.sh
+  - ./Scripts/DeployingNuget.sh
