--- a/UnitTests/BBS.Libraries.UnitTests.General/BBS.Libraries.UnitTests.General.csproj
+++ b/UnitTests/BBS.Libraries.UnitTests.General/BBS.Libraries.UnitTests.General.csproj
@@ -40,12 +40,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data.cs" />
+    <Compile Include="Emails.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusTracker.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\BBS.Libraries.Contracts\BBS.Libraries.Contracts.csproj">
+      <Project>{65ad0d4e-b8f9-463e-a92a-7021f367de0c}</Project>
+      <Name>BBS.Libraries.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\BBS.Libraries.Emails\BBS.Libraries.Emails.csproj">
+      <Project>{91a15f13-d1d0-4e55-8f52-8c1e2e744fd2}</Project>
+      <Name>BBS.Libraries.Emails</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\BBS.Libraries.Enums\BBS.Libraries.Enums.csproj">
       <Project>{f9ccc56c-a0cf-4568-a51b-7bfdc8deba65}</Project>
       <Name>BBS.Libraries.Enums</Name>
